[gd_scene load_steps=5 format=2]

[ext_resource path="res://screens/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/Game.gd" type="Script" id=3]
[ext_resource path="res://entities/HUD.scn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]
[connection signal="coin_tapped" from="HUD" to="." method="_on_HUD_coin_tapped"]
[connection signal="game_end" from="HUD" to="." method="endGame"]
[connection signal="game_pause" from="HUD" to="." method="pauseGame"]
[connection signal="start_game" from="MainMenu" to="." method="startGame"]
[connection signal="game_menu" from="PauseMenu" to="." method="toMainMenu"]
[connection signal="game_resume" from="PauseMenu" to="." method="resumeGame"]
